Added basic database connection and some crud operations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
 spring.application.name=MCBuildLibrary
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
+
+# Datasource URL, replace with your host, port, and database name.
+spring.datasource.url=jdbc:mariadb://localhost:3306/mcbuildlibrary?useSSL=false&serverTimezone=UTC
+
+# Your MariaDB credentials
+spring.datasource.username=root
+spring.datasource.password=TeamSUN888
+
+# Explicit driver (optional because Spring Boot can usually detect this, but it?s good to be clear)
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# JPA and Hibernate configuration (if using Spring Data JPA)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.show-sql=true
