Added theme and color as entities with manyToMany relation to Build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,11 @@ spring.datasource.password=TeamSUN888
 # Explicit driver (optional because Spring Boot can usually detect this, but it?s good to be clear)
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# JPA and Hibernate configuration (if using Spring Data JPA)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Enable detailed Hibernate logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
