Fixed Checkstyle and Sonar issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,11 @@
 spring.application.name=MCBuildLibrary
 
-# Datasource URL, replace with your host, port, and database name.
-spring.datasource.url=jdbc:mariadb://localhost:3306/mcbuildlibrary?useSSL=false&serverTimezone=UTC
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-# Your MariaDB credentials
-spring.datasource.username=root
-spring.datasource.password=TeamSUN888
-
-# Explicit driver (optional because Spring Boot can usually detect this, but it?s good to be clear)
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# Hibernate settings
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# Enable detailed Hibernate logging
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.orm.jdbc.bind=TRACE
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
