--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+
+logging.level.sovok.mcbuildlibrary.aspect.LoggingAspect=INFO
+logging.level.sovok.mcbuildlibrary.cache.InMemoryCache=DEBUG
