--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.application.name=MCBuildLibrary
-
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -7,8 +5,20 @@ spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
 
+# --- Batching Configuration ---
+spring.jpa.properties.hibernate.jdbc.batch_size=30
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+# Optional: Enable statistics to check batching (useful for debugging)
+# spring.jpa.properties.hibernate.generate_statistics=true
+
+# --- Logging ---
 logging.level.sovok.mcbuildlibrary.aspect.LoggingAspect=INFO
-logging.level.sovok.mcbuildlibrary.cache.InMemoryCache=DEBUG
+logging.level.sovok.mcbuildlibrary.cache.InMemoryCache=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+# Optional: To see batch statistics if generate_statistics=true
+# logging.level.org.hibernate.stat=DEBUG
