Added authorization and basic authenitifcation, fixed checkstyle/sonarcube problems for backaend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql=TRACE
 # Optional: To see batch statistics if generate_statistics=true
 # logging.level.org.hibernate.stat=DEBUG
+
+# Username for the default admin (can be overridden by APP_DEFAULT_ADMIN_USERNAME env var)
+app.default-admin.username=admin
+app.default-admin.password=YOUR_STRONG_ADMIN_PASSWORD_HERE_ENV_OR_CONFIG
