--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,39 @@
-# File: MCBuildLibrary/docker-compose.yml
-# version: '3.8' # This line can be removed
+# File: docker-compose.yml
+# version: '3.8' # This line is obsolete and can be removed.
 
 services:
-  db:
-    image: postgres:15-alpine
-    container_name: mcbuildlibrary-db
-    environment:
-      POSTGRES_DB: mcbuildlibrary
-      POSTGRES_USER: ${DB_USERNAME:-dbuser}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-dbpassword}
-    volumes:
-      - mcbuildlibrary_data:/var/lib/postgresql/data
-    ports:
-      - "5433:5432" # Changed host port to 5433 to avoid conflict if local Postgres runs on 5432
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USERNAME:-dbuser} -d mcbuildlibrary"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     build:
       context: .
       dockerfile: Dockerfile.backend
       args:
-        # Corrected JAR file name to match case
-        JAR_FILE: target/MCBuildLibrary-0.0.1-SNAPSHOT.jar
-    container_name: mcbuildlibrary-backend
-    depends_on:
-      db:
-        condition: service_healthy
-    environment:
-      DB_URL: jdbc:postgresql://db:5432/mcbuildlibrary # Service name 'db' for hostname
-      DB_USERNAME: ${DB_USERNAME:-dbuser}
-      DB_PASSWORD: ${DB_PASSWORD:-dbpassword}
-      APP_DEFAULT_ADMIN_USERNAME: ${APP_DEFAULT_ADMIN_USERNAME:-admin}
-      APP_DEFAULT_ADMIN_PASSWORD: ${APP_DEFAULT_ADMIN_PASSWORD:-Chang3M3N0w!}
-      # SPRING_PROFILES_ACTIVE: dev # Uncomment if you need specific profiles
+        JAR_FILE_NAME: MCBuildLibrary-0.0.1-SNAPSHOT.jar # Ensure this matches your JAR
+        JAR_FILE_PATH: target
     ports:
       - "8080:8080"
-    restart: unless-stopped
+    environment:
+      # Use the IP address of your docker0 interface
+      - DB_URL=jdbc:postgresql://172.17.0.1:5432/mcbuildlibrary
+      - DB_USERNAME=mcbuilduser
+      - DB_PASSWORD=securepassword
+      - APP_DEFAULT_ADMIN_USERNAME=admin
+      - APP_DEFAULT_ADMIN_PASSWORD=password
+    # extra_hosts: # You can remove or comment this out if using the direct IP
+    #   - "host.docker.internal:host-gateway"
+    networks:
+      - mcbuildapp-network
 
   frontend:
     build:
-      context: .
+      context: ./frontend
       dockerfile: Dockerfile.frontend
-    container_name: mcbuildlibrary-frontend
+    ports:
+      - "3000:80"
     depends_on:
       - backend
-    ports:
-      - "3000:80" # Host port 3000 maps to container port 80 (Nginx)
-    restart: unless-stopped
+    networks:
+      - mcbuildapp-network
 
-volumes:
-  mcbuildlibrary_data:
+networks:
+  mcbuildapp-network:
+    driver: bridge
