--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,27 +12,26 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to the backend
-    # The backend service will be named 'backend' in docker-compose
+    # Proxy API requests to the backend (NO trailing slash on proxy_pass target)
     location /api/ {
-        proxy_pass http://backend:8080/; # Forward to backend, path is maintained after /api/
+        proxy_pass http://backend:8080; # REMOVED trailing slash
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Proxy login requests to the backend
+    # Proxy login requests to the backend (trailing slash is OK here if backend expects /login)
     location = /login {
         proxy_pass http://backend:8080/login;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Content-Type $http_content_type; # Pass content type for form data
+        proxy_set_header Content-Type $http_content_type;
     }
 
-    # Proxy logout requests to the backend
+    # Proxy logout requests to the backend (trailing slash is OK here if backend expects /logout)
     location = /logout {
         proxy_pass http://backend:8080/logout;
         proxy_set_header Host $host;
