--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # Username for the default admin (can be overridden by APP_DEFAULT_ADMIN_USERNAME env var)
 app.default-admin.username=admin
 app.default-admin.password=YOUR_STRONG_ADMIN_PASSWORD_HERE_ENV_OR_CONFIG
+
+logging.level.org.springframework.security.web.csrf=DEBUG
