--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # --- Batching Configuration ---
 spring.jpa.properties.hibernate.jdbc.batch_size=30
