Refactor: Improve SPA routing and SpaController

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,42 +7,29 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Serve static files directly
+    # Serve static files directly and fallback to index.html for SPA routing
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to the backend (NO trailing slash on proxy_pass target)
+    # Proxy API requests to the backend
+    # Assumes Spring Boot backend is at http://backend:8080 and handles /api prefix
     location /api/ {
-        proxy_pass http://backend:8080; # REMOVED trailing slash
+        proxy_pass http://backend:8080; # Spring Boot handles /api/*
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Content-Type $http_content_type; # Important for POST bodies
     }
 
-    # Proxy login requests to the backend (trailing slash is OK here if backend expects /login)
-    location = /login {
-        proxy_pass http://backend:8080/login;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Content-Type $http_content_type;
-    }
-
-    # Proxy logout requests to the backend (trailing slash is OK here if backend expects /logout)
-    location = /logout {
-        proxy_pass http://backend:8080/logout;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    # REMOVE specific location blocks for /login and /logout if they are now under /api
+    # location = /login { ... }
+    # location = /logout { ... }
 
     # Optional: Add error pages or other Nginx configurations
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html; # Or a specific error page directory
     }
 }
