--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,4 @@ app.default-admin.username=admin
 app.default-admin.password=YOUR_STRONG_ADMIN_PASSWORD_HERE_ENV_OR_CONFIG
 
 logging.level.org.springframework.security.web.csrf=DEBUG
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
