Fixed fixed default admin credentials, now they are got from environemtnal variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,8 @@ logging.level.org.hibernate.type.descriptor.sql=TRACE
 # logging.level.org.hibernate.stat=DEBUG
 
 # Username for the default admin (can be overridden by APP_DEFAULT_ADMIN_USERNAME env var)
-app.default-admin.username=admin
-app.default-admin.password=YOUR_STRONG_ADMIN_PASSWORD_HERE_ENV_OR_CONFIG
+app.default-admin.username=${APP_DEFAULT_ADMIN_USERNAME}
+app.default-admin.password=${APP_DEFAULT_ADMIN_PASSWORD}
 
 logging.level.org.springframework.security.web.csrf=DEBUG
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
