--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ app.default-admin.password=${APP_DEFAULT_ADMIN_PASSWORD}
 
 logging.level.org.springframework.security.web.csrf=DEBUG
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+server.forward-headers-strategy=NATIVE
